--- a/wp-content/themes/minn-lite/custom.css
+++ b/wp-content/themes/minn-lite/custom.css
@@ -158,9 +158,11 @@ div:hover.tooltips span {
 	font-size: 16px;
 }
 .filterdiv input {
-	margin: 0px 5px 7px 0px;
+	margin: 2px 5px 2px 0px;
 	float: left;
 }
+.filterdiv{line-height:18px !important;}
+.filterdiv label{display:block;clear:left;}
 .aLoad {
 	font-size: 20px;
 	padding: 10px;
@@ -205,9 +207,10 @@ div:hover.tooltips span {
 	text-align: right;
 	font-size: 12px;
 }
-.markedAsRead {
+.storyPromptContainer .markedAsRead {
 	background: #ede8e6 !important;
 	opacity: 0.75;
+	margin:10px 0px !important;
 }
 .single-stories .markedAsRead {
 	background: transparent !important;
@@ -460,10 +463,10 @@ a.pageMore {
 	background: #fff;
 	border-radius: 0px;
 	color: #c0c0c0 !important;
-	font-size: 28px;
-	width: 40px;
-	height: 40px;
-	line-height: 44px;
+	font-size: 18px;
+	width: 10px;
+	height: 20px;
+	line-height: 22px;
 	display: inline-block;
 	border: 1px solid #c0c0c0;
 	padding: 3px 8px;
@@ -546,7 +549,7 @@ a.square {
 }
 .storyPromptContainer .storyPromptContainer {
 	border-bottom: none;
-	margin: 0px !important;
+	margin: 0px;
 }
 .writing-prompt .entry-content img {margin:0px 15px 15px 0px !important;}
 .next a, .prev a {
@@ -654,9 +657,18 @@ a.more.big {
 	padding-right: 25px;
 	box-sizing: border-box;
 }
+
+
 .storyPromptContainer {
 	padding-bottom: 15px;
 }
+.all-prompts.storyPromptContainer{padding-bottom:5px !important;margin:5px 0px !important;}
+.all-prompts .entry-title{float:left;margin:0px !important;}
+.all-prompts .entry-content{float:right;margin-top:-38px;}
+.all-prompts h2.entry-title {
+    font-size: 20px;padding-top:3px;
+}
+
 .storyPromptContainer p {
 /* margin-left:165px; */
 }
@@ -922,7 +934,6 @@ display:none;
 
 #buddypress div.item-list-tabs ul li {
 	float: left;
-	margin: 0;
 	list-style: none;
 	border: 1px solid black;
 	border-bottom: none;
@@ -945,3 +956,14 @@ display:none;
 	position:relative;
 	top:4px;
 }
+.at-share-tbx-element .at-icon-wrapper {
+    vertical-align: top !important;
+}
+#pl-4447 .panel-grid-cell .so-panel#panel-4447-0-0-3 {
+    margin-bottom: 0px !important;
+}
+.content.advertisement{display:none;}
+
+.all-stories .storyPromptContainer{padding:0px 3px;margin: 5px 0 !important;border-bottom:1px solid #777 !important;}
+.all-stories .storyPromptContainer h2.entry-title{font-size:20px;margin:8px 0px 2px 0px;}
+.all-stories .storyPromptContainer .post-meta, .all-stories .storyPromptContainer p, .all-stories .storyPromptContainer .promptedBy, .all-stories .storyPromptContainer .entry-content {display:none;visible:hidden;}
